# ChessQt

./: .gitignore  CMakeLists.txt  Chess.pro  README.md
forms/: chessboard.ui
include/: bishop.h  boardWidget.h  chessboard.h  chessgame.h  color.h  king.h  knight.h  movementUtil.h  pawn.h  piece.h  player.h  queen.h  rook.h  square.h
src/: bishop.cpp  boardWidget.cpp  chessboard.cpp  chessgame.cpp  king.cpp  knight.cpp  movementUtil.cpp  pawn.cpp  piece.cpp  player.cpp  queen.cpp  rook.cpp  square.cpp
